2008-08-14  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mini_method_compile): Abort aot compilation for generic
	methods if generic sharing is disabled.
	
	* mini.c (mono_method_to_ir): Disable AOT for virtual calls requiring
	an mrgctx.

2008-08-13  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c (mono_arch_cpu_optimizazions):  Remove peephole and branch
	  from default optimizaton list on Winx64.

	* mini-amd64.c (emit_tls_get):  Added Winx64 specific implementation for GetTLS.

	* mini-amd64.c (mono_arch_emit_prolog):  Adding an offset on Winx64 to get
	  the LMF from the MonoJitTlsData structure.

	* mini-amd64.c (mono_arch_setup_jit_tls_data):  Added Winx64 implementation.

	Contributed under MIT/X11 license.

2008-08-12  Zoltan Varga  <vargaz@gmail.com>

	* driver.c (main_thread_handler): Allow AOT compilation of multiple 
	assemblies in one run.

	* aot-compiler.c (mono_compile_assembly): Only print out a count of
	skipped methods if it is not 0.

2008-08-12  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (emit_call_body): Use image->aot_module instead of 
	assembly->aot_module.

	* aot-runtime.c: Use image->aot_module instead of searching in the aot_modules
	hash table. This simplifies and speeds up a lot of code, and fixes support
	for .netmodules.

2008-08-12  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (SIG_HANDLER_SIGNATURE): Avoid crashes if the thread is not registered
	with the runtime.

	* mini-exceptions.c: Ditto.

2008-08-11  Zoltan Varga  <vargaz@gmail.com>

	* aot-runtime.c (mono_aot_get_method): Avoid doing all the loading inside
	the aot lock, to avoid deadlocks when mono_aot_get_class_from_name () is
	called while holding the loader lock. Fixes #415608.
	(mono_aot_get_method_from_token_inner): Ditto.

2008-08-08  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (mono_aot_parse_options): Disable no-dlsym option for now.
	
	* mini.c (mono_resolve_patch_target): Don't error out on missing icalls
	while aot compiling.
	